--- a/index.html
+++ b/index.html
@@ -5,21 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- swiper js css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <!-- Mapbox CSS -->
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css' rel='stylesheet' />
     <!-- j query ui style sheet -->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.3/themes/smoothness/jquery-ui.css">
+    <!-- Fullpage CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.22/fullpage.css" integrity="sha512-AIwt5sjXSKDo4t0KSQ/eAuy43kQMc1hYtIKLxaFrHd26nQFzMo1FJdBIickVyGXnhm2xB2OOYBqMBgu3dBU4KA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- custom css -->
     <link rel="stylesheet" href="./css/style.min.css">
     <title>Document</title>
 </head>
 <body>
-    <h2>gulp boilerplate</h2>
 
-
-
-
-
+    <nav id="#navbar"></nav>
+    <!-- Fullpage container - must be present for fullpage to work -->
+    <div id="fullpage">
+        <!-- SECTIONS - these are the verticals - must have atleast 1 -->
+        <!-- SLIDES - horizontal - live inside of SECTIONS -->
+        <div class="section">
+            <!-- Slides go inside a section -->
+            <div class="slide">
+                <h2>Welcome</h2>
+                <form id="signupForm">
+                    <input type="text" id="username" placeholder="Username" required>
+                    <input type="email" id="email" placeholder="Email" required>
+                    <input type="password" id="password" placeholder="Password" required>
+                    <button id="submitButton">Sign Up</button>
+                </form>
+                <div id="formMessage"></div>
+            </div>
+            
+            <div class="slide" id="slide2">
+                Slide 2
+            <div class="results" id="results"></div>
+            </div>
+            <div class="slide" id="slide3">
+                Slide 3
+            </div>
+        </div>
+    </div>
 
 
 
@@ -28,12 +50,12 @@
     <script src="https://kit.fontawesome.com/ff75b7e563.js" crossorigin="anonymous"></script>
     <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- Mapbox JS -->
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js'></script>
     <!-- j query -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- j query ui -->
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.3/jquery-ui.min.js"></script>
+    <!-- Fullpage JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.22/fullpage.min.js" integrity="sha512-yHHLi2ZwgtW9QNVZd0asqMyWGJ6Kx73ijKlGWSi3MwYFB5ZzOJV8wPtopKr6muHk5SERgF3OB/2dZj3StlI34w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- custom js -->
     <script src="./js/script.min.js"></script>
 </body>
