--- a/index.html
+++ b/index.html
@@ -34,8 +34,28 @@
             </div>
             
             <div class="slide" id="slide2">
-                Slide 2
-            <div class="results" id="results"></div>
+                <div class="header-img"></div>
+                <div class="filter-container">
+                    <div class="filter">
+                        <label for="genre">Genre</label>
+                        <select name="genre" id="genre" class="select">
+                            <option value="">Any</option>
+                            <option value="Action">Action</option>
+                            <option value="Adventure">Adventure</option>
+                            <option value="Horror">Horror</option>
+                            <option value="MMO">MMO</option>
+                            <option value="Platformer">Platformer</option>
+                            <option value="Puzzle"></option>
+                            <option value="RPG">RPG</option>
+                            <option value="Roguelike">Roguelike</option>
+                            <option value="Simulation">Simulation</option>
+                            <option value="Strategy">Strategy</option>
+                            <option value="Survival">Survival</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="results" id="results">
+                </div>
             </div>
             <div class="slide" id="slide3">
                 Slide 3
