more style, fun animations

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             </div>
             
             <div class="slide" id="slide2">
-                <div class="header-img"></div>
+                <div class="header">
+                    <h1>Check out these Games!</h1>
+                </div>
                 <div class="filter-container">
                     <div class="filter">
                         <label for="genre">Genre:</label>
