--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 <button id="backArrow"><i class="fa-solid fa-arrow-left" ></i></button>
                 <div class="details-page">
                 </div>
+                
             </div>
         </div>
     </div>
@@ -93,6 +94,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- j query ui -->
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.3/jquery-ui.min.js"></script>
+    <!-- vanilla tilt js -->
+    <script src="tilt.js"></script>
     <!-- Fullpage JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.22/fullpage.min.js" integrity="sha512-yHHLi2ZwgtW9QNVZd0asqMyWGJ6Kx73ijKlGWSi3MwYFB5ZzOJV8wPtopKr6muHk5SERgF3OB/2dZj3StlI34w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- custom js -->
